// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioElement renders correctly with default props 1`] = `
<DocumentFragment>
  <audio
    autoplay=""
  />
</DocumentFragment>
`;

exports[`AudioElement renders with caption and src 1`] = `
<DocumentFragment>
  <audio
    autoplay=""
    src="https://radio.talkradio.co.uk/stream"
  >
    <track
      kind="captions"
      src="captions.vtt"
    />
  </audio>
</DocumentFragment>
`;
